# arcadia

./: .gitignore  .golangci.yml  .goreleaser.yaml  .kubeagi_repo.yaml  .kubebb_repo.yaml  .pylintrc  CODE_OF_CONDECT.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT  README.md  ROADMAP.md  ROADMAP_cn.md  go.mod  go.sum  gqlgen.yaml  index.yaml  kubeagi.yaml  main.go  nvidia_gpu.yaml
.github/: PULL_REQUEST_TEMPLATE.md  auto_request_review.yml
.github/workflows/: auto_assign_reviewers.yml  build_bff_sdk.yaml  chart_lint_test.yaml  codespell.yaml  eval_image_build.yml  (+12 more)
apiserver/: README.md  main.go
arctl/: README.md  chat.go  dataset.go  datasource.go  load.go  main.go
assets/: arch.drawio  dataset_flow.drawio  dataset_storage.drawio  kubeagi.drawio  local_llms_arch.drawio  system_datasource.drawio
controllers/: application_controller.go  dataset_controller.go  datasource_controller.go  embedder_controller.go  knowledgebase_controller.go  laboratory_controller.go  llm_controller.go  model_controller.go  namespace_controller.go  prompt_controller.go  suite_test.go  vectorstore_controller.go  versioneddataset_controller.go  worker_controller.go
data-process/: .gitignore  README.md  requirements.txt
data-processing/: .gitignore  Dockerfile  Dockerfile.base  README.md  README.zh.md  entrypoint.sh  requirements.txt
deploy/: kubeagi.yaml
doc/: development.md
docs/: README.md  development.md  installation.md  kind.md  kind_gpu.md  run-llm-app-using-streamlit.md  run-llm-application.md
evaluation/: ragas-sample.py
examples/: README.md
hack/: boilerplate.go.txt  install-operator-sdk.sh
llms/: Dockerfile  Dockerfile.server  Dockerfile.worker  README.md  docker-compose.yml
pypi/ragas_once/: LICENSE  README.md  pyproject.toml  setup.py
pypi/ragas_once/ragas_once/: cli.py  wrapper.py
pypi/ragas_once/src/ragas_once/: cli.py  eval.py  wrapper.py
pypi/ragas_once/src/ragas_once/embeddings/: openai.py
tests/: build-bff-sdk.sh  deploy-values.yaml  example-test.sh  kind-config.yaml  knowledgebase-1.txt
(+986 files in other folders)
