[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm",
    "ragas",
    "langchain"
]
build-backend = "setuptools.build_meta"

[project]
name = "ragas_once"
version = "0.0.1"
authors = [
    { name = "Kielo", email = "lanture1064@gmail.com" },
]
description = "A one-step Ragas cli tool to evaluate RAG apps"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain",
    "ragas",
]

[project.scripts]
ro = "ragas_once.cli:main"